# Julia_Nocun_portfolio

./: me.html
AI/1/: AstarAlgorithm.py  BFSalgorithm.py  DFSalgorithm.py  board.py  program.py  row_cols.py
AI/1/generatory/: runprog.ps1
AI/2/: main.py  plots.py  reader.py
AI/2/data/dynamic/: test_data.csv
BabysittingAgency/: .gitignore  README.md
BabysittingAgency/BabysittingAgency/: CMakeLists.txt
BabysittingAgency/BabysittingAgency/include/: typedefs.h
BabysittingAgency/BabysittingAgency/include/Exceptions/: BadArguments.h  LogicError.h
BabysittingAgency/BabysittingAgency/include/Managers/: BabysittersManager.h  ChildrenManager.h  ReservationsManager.h
BabysittingAgency/BabysittingAgency/include/Model/: Address.h  Babysitter.h  BabysitterType.h  BabysittingAgency.h  Child.h  NewbornsBabysitter.h  RemainingAgeRangeBabysitter.h  Reservation.h  ToddlersBabysitter.h
BabysittingAgency/BabysittingAgency/include/Repository/: Repository.h
BabysittingAgency/BabysittingAgency/src/: main.cpp
BabysittingAgency/BabysittingAgency/src/Managers/: BabysittersManager.cpp  ChildrenManager.cpp  ReservationsManager.cpp
BabysittingAgency/BabysittingAgency/src/Model/: Address.cpp  Babysitter.cpp  BabysittingAgency.cpp  Child.cpp  NewbornsBabysitter.cpp  RemainingAgeRangeBabysitter.cpp  Reservation.cpp  ToddlersBabysitter.cpp
BabysittingAgency/BabysittingAgency/test/: AddressTest.cpp  BabysitterTest.cpp  BabysitterTypesTest.cpp  ChildTest.cpp  ReservationTest.cpp
Cryptography/BackpackAlgorythm/: .gitignore  pom.xml
Cryptography/DESX/: pom.xml
Graphics/JN_space_final/: Flower.mtl  JN_zad4.pde  Objects.pde  sketch.properties
Iris_analysis/: Zad2_KAD.py  data.csv  zad1_KAD.py  zad3_KAD.py
Math/1/: metody_0_2.py  schemat_hornera.py  tworzenie_wykresu.py  wykorzystane_funkcje.py  zad1.py
Math/2/: eliminacja.py  main.py  odczyt_pliku.py  podstawianie.py
Math/3/: interpolacja_Newtona.py  main.py  odczyt_pliku.py  schemat_hornera.py  silnia.py  tabela_roznic.py  wartosci_stablicowane.txt  wykorzystane_funkcje.py
Math/4/: calkowanie_funkcje.py  main.py  schemat_hornera.py  wykorzystane_funkcje.py
Math/5/: aproksymacja.py  main.py  schemat_hornera.py  wykorzystane_funkcje.py
Projekt XML/: main.css  main.html  menu1.css  menu2.xml  menu3.css  menu3.xml  menu3.xsd  menu4a.html  menu4a.xsl  menu4b.txt  menu4b.xsl  menu4c.html  menu4c.xsl  podstrona2.html  podstrona3.html  podstrona4.html  zad1.html
Python/1/: analysis.ipynb
Python/2/: chase.py
Python/3/webapp/: app.py  config.py  model.py
Sudoku/: pom.xml
Sudoku/Model/: pom.xml
Sudoku/View/: pom.xml
applications_in_interpreted_languages/1/: index.html  scripts.js  theme.css
applications_in_interpreted_languages/2/: app.js  initDB.js  package.json
applications_in_interpreted_languages/2/docker/: Dockerfile  docker-compose.yml
applications_in_interpreted_languages/2/middleware/: auth.js  errorHandler.js
applications_in_interpreted_languages/2/models/: Opinion.js  Order.js  OrderStatus.js  Product.js  User.js
applications_in_interpreted_languages/2/routes/: authRoutes.js  categoryRoutes.js  initRoutes.js  opinionRoutes.js  orderRoutes.js  orderStatusRoutes.js  productRoutes.js
applications_in_interpreted_languages/3/shop-frontend/: package.json
humanitarian-aid-coordination-system/: .gitignore  CODEOWNERS  README.md  pom.xml
(+271 files in other folders)
